--- a/index.html
+++ b/index.html
@@ -2,26 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="initial-scale=1,width=device-width">
     <link rel="stylesheet" href="css/leaflet.css">
-    <link rel="stylesheet" href="css/L.Control.Layers.Tree.css">
-    <link rel="stylesheet" href="css/qgis2web.css">
-    <link rel="stylesheet" href="css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="css/leaflet.photon.css">
     <style>
         html, body, #map {
             width: 100%;
             height: 100%;
-            padding: 0;
             margin: 0;
-        }
-        .compass {
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 4px;
-            padding: 2px;
         }
         textarea {
             width: 100%;
@@ -30,7 +17,6 @@
         }
         button {
             margin-top: 5px;
-            padding: 5px 10px;
         }
         .comment {
             background: #f0f0f0;
@@ -38,24 +24,19 @@
             padding: 3px 6px;
             margin-bottom: 3px;
         }
+        .loading {
+            font-style: italic;
+            color: gray;
+        }
     </style>
     <title>MAPA DE PRECIOS</title>
 </head>
 <body>
     <div id="map"></div>
 
-    <!-- Librerías originales -->
-    <script src="js/qgis2web_expressions.js"></script>
+    <!-- Librerías -->
     <script src="js/leaflet.js"></script>
-    <script src="js/L.Control.Layers.Tree.min.js"></script>
-    <script src="js/leaflet.rotatedMarker.js"></script>
-    <script src="js/leaflet.pattern.js"></script>
-    <script src="js/leaflet-hash.js"></script>
     <script src="js/Autolinker.min.js"></script>
-    <script src="js/rbush.min.js"></script>
-    <script src="js/labelgun.min.js"></script>
-    <script src="js/labels.js"></script>
-    <script src="js/leaflet.photon.js"></script>
     <script src="data/MANZANAS_1.js"></script>
 
     <!-- Firebase -->
@@ -63,69 +44,34 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 
     <script>
-        // 🔹 Poner tus datos de Firebase aquí:
+        // 🔹 CONFIGURA AQUÍ TU PROYECTO FIREBASE
         const firebaseConfig = {
             apiKey: "AIzaSyClt9pn5pyJqeVES5sCPiIuvwEZQ1eLPXk",
             authDomain: "firebase-adminsdk-fbsvc@brasil-dd6e7.iam.gserviceaccount.com",
             projectId: "brasil-dd6e7",
+            storageBucket: "TU_PROJECT_ID.appspot.com",
+            messagingSenderId: "461452464939",
+            appId: "1:461452464939:web:052b68d3f0e1379385ab6e"
         };
+
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
 
-        var map = L.map('map', {
-            zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[-2.898664371624175,-79.00151146570266],[-2.8684860886436003,-78.93974084302081]]);
-
-        map.attributionControl.setPrefix('BRASIL');
-
-        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
-
-        var title = new L.Control({'position':'topleft'});
-        title.onAdd = function (map) {
-            this._div = L.DomUtil.create('div', 'info');
-            this.update();
-            return this._div;
-        };
-        title.update = function () {
-            this._div.innerHTML = '<h2>MAPA DE PRECIOS </h2>';
-        };
-        title.addTo(map);
-
-        var compass = L.control({position: 'topright'});
-        compass.onAdd = function(map) {
-            var div = L.DomUtil.create('div', 'compass');
-            div.innerHTML = '<img src="img/NORTE.SVG" style="width:50px;height:50px;">';
-            return div;
-        };
-        compass.addTo(map);
-
-        var zoomControl = L.control.zoom({position: 'topleft'}).addTo(map);
-
-        var bounds_group = new L.featureGroup([]);
-        function setBounds() {}
-
-        map.createPane('pane_GoogleSatellite_0');
-        map.getPane('pane_GoogleSatellite_0').style.zIndex = 400;
-        var layer_GoogleSatellite_0 = L.tileLayer('https://mt1.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
-            pane: 'pane_GoogleSatellite_0',
-            opacity: 1.0,
-            minZoom: 1,
-            maxZoom: 28,
-            minNativeZoom: 0,
-            maxNativeZoom: 22
-        });
-        map.addLayer(layer_GoogleSatellite_0);
+        var map = L.map('map').fitBounds([[-2.89866, -79.00151], [-2.86848, -78.93974]]);
+        L.tileLayer('https://mt1.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
+            maxZoom: 22
+        }).addTo(map);
 
         function pop_MANZANAS_1(feature, layer) {
             let id = feature.properties['#'];
             let popupContent = `
                 <table>
-                    <tr><td colspan="2"><strong>#</strong><br>${id}</td></tr>
-                    <tr><th>PRECIOXM2</th><td>${feature.properties['PRECIOXM2'] || ''}</td></tr>
+                    <tr><td><strong>#</strong> ${id}</td></tr>
+                    <tr><td>PRECIOXM2: ${feature.properties['PRECIOXM2'] || ''}</td></tr>
                 </table>
                 <div>
                     <h4>Comentarios</h4>
-                    <div id="comments-${id}">Cargando...</div>
+                    <div id="comments-${id}" class="loading">Cargando...</div>
                     <textarea id="comment-input-${id}" placeholder="Escribe tu comentario"></textarea><br>
                     <button onclick="addComment('${id}')">Enviar</button>
                 </div>
@@ -136,15 +82,23 @@
 
         function loadComments(polygonId) {
             const commentsDiv = document.getElementById(`comments-${polygonId}`);
+            if (!commentsDiv) return;
+            commentsDiv.innerHTML = "Cargando...";
             db.collection("comments")
               .where("polygonId", "==", polygonId)
               .orderBy("timestamp", "asc")
               .onSnapshot(snapshot => {
                   commentsDiv.innerHTML = "";
+                  if (snapshot.empty) {
+                      commentsDiv.innerHTML = "<em>Sin comentarios</em>";
+                      return;
+                  }
                   snapshot.forEach(doc => {
                       const data = doc.data();
                       commentsDiv.innerHTML += `<div class="comment">${data.text}</div>`;
                   });
+              }, err => {
+                  commentsDiv.innerHTML = `<span style="color:red;">Error al cargar: ${err.message}</span>`;
               });
         }
 
@@ -152,37 +106,25 @@
             const input = document.getElementById(`comment-input-${polygonId}`);
             const text = input.value.trim();
             if (!text) return;
+            input.disabled = true;
             db.collection("comments").add({
-                polygonId: polygonId,
-                text: text,
+                polygonId,
+                text,
                 timestamp: firebase.firestore.FieldValue.serverTimestamp()
+            }).then(() => {
+                input.value = "";
+                input.disabled = false;
+            }).catch(err => {
+                alert("Error al guardar: " + err.message);
+                input.disabled = false;
             });
-            input.value = "";
         }
 
-        function style_MANZANAS_1_0() {
-            return {
-                pane: 'pane_MANZANAS_1',
-                opacity: 1,
-                color: 'rgba(35,35,35,0.633)',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(225,79,79,0.633)',
-                interactive: true,
-            }
-        }
-
-        map.createPane('pane_MANZANAS_1');
-        map.getPane('pane_MANZANAS_1').style.zIndex = 401;
         var layer_MANZANAS_1 = new L.geoJson(json_MANZANAS_1, {
             interactive: true,
-            onEachFeature: pop_MANZANAS_1,
-            style: style_MANZANAS_1_0,
+            onEachFeature: pop_MANZANAS_1
         });
-        bounds_group.addLayer(layer_MANZANAS_1);
         map.addLayer(layer_MANZANAS_1);
-        setBounds();
     </script>
 </body>
 </html>
