--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         // 🔹 CONFIGURA AQUÍ TU PROYECTO FIREBASE
         const firebaseConfig = {
             apiKey: "AIzaSyClt9pn5pyJqeVES5sCPiIuvwEZQ1eLPXk",
-            authDomain: "firebase-adminsdk-fbsvc@brasil-dd6e7.iam.gserviceaccount.com",
+            authDomain: "brasil-dd6e7.firebaseapp.com",
             projectId: "brasil-dd6e7",
-            storageBucket: "TU_PROJECT_ID.appspot.com",
+            storageBucket: "brasil-dd6e7.firebasestorage.app",
             messagingSenderId: "461452464939",
             appId: "1:461452464939:web:052b68d3f0e1379385ab6e"
         };
